# nRF5-DK-Temperature-Logger

./: CMakeLists.txt  README.md  nrf52832dk_nrf52832.overlay  nrf52dk_nrf52832.dts  nrf52dk_nrf52832.yaml  pm_static.yaml  pm_static.yml  prj.conf
include/: buttonHandler.h  flashHandler.h  ledHandler.h  main.h  sensorsHandler.h  temperature.h  timers.h
src/: buttonHandler.c  flashHandler.c  ledHandler.c  main.c  sensorsHandler.c  temperature.c  timers.c
